--- a/Index.html
+++ b/Index.html
@@ -276,15 +276,18 @@
   /* Blog Styles */
 
   .blog {
+    margin: 0 auto;
+    width: 70%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
   }
 
   .articles {
-    grid-column: 1/3;
+    grid-column: 1/2;
 
   }
+
 
   a {
     text-decoration: none;
@@ -298,7 +301,7 @@
   }
 
   .music {
-    grid-column: 3/-1;
+    grid-column: 2/-1;
   }
 
 
