--- a/Index.html
+++ b/Index.html
@@ -121,7 +121,10 @@
       </div>
 
       <div class="quote">
-        <h2 class="quo">"The Illiterates of today are the ones who unlearn what they've learned"</h2>
+        <h3 class="quo">"The learning process continues until the day you die."
+          <br>
+          <i>Kirk Douglas.</i>
+        </h3>
       </div>
 
       <div class="credits">
@@ -342,7 +345,11 @@
     grid-row: 1/2;
     display: grid;
     text-align: center;
-    vertical-align: middle;
+  }
+
+  .quo {
+    margin: 0;
+    padding: 80px 0;
   }
 
   .credits {
